[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "flask-enciphers"
version         = "0.1.0"
description     = "Encrypted session interface for Flask using enciphers"
readme          = "README.md"
license         = { text = "Apache-2.0" }
authors         = [{ name = "Mejlad Alsubaie" }]
keywords        = ["flask", "session", "encryption", "enciphers"]
requires-python = ">=3.11"
dependencies = ["flask >= 2.0", "enciphers", "orjson"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Framework :: Flask",
]

[project.urls]
Homepage = "https://github.com/mjlad/flask-enciphers"

[tool.hatch.build.targets.wheel]
packages = ["src/flask_enciphers"]
